<resources>
    <string name="app_name">SharedPrefs</string>
    <string name="nameTxt">Nome completo</string>
    <string name="ageTxt">Idade</string>
    <string name="smokingTxt">Sou fumante</string>
    <string name="okBt">Guardar preferências</string>
    <string name="loadBt">Carregar Preferências</string>
    <string name="cleanBt">Limpar tudo</string>
    <string name="pref_key">DESCOMPLICAEXAMPLE</string>
    <string name="pref_val_name">NAME</string>
    <string name="pref_val_age">AGE</string>
    <string name="pref_val_smoke">SMOKE</string>
    <string name="saved">Dados salvos!</string>
    <string name="saveError_numberEx">Erro: Verifique a idade!</string>
    <string name="saveErrorGenericEx">Erro ao salvar</string>
    <string name="loadErrorEx">Erro ao carregar</string>
</resources>